--- a/style.css
+++ b/style.css
@@ -476,10 +476,10 @@ body {
     position: fixed;
     z-index: 10;
     left: 20%;
-    top: 20%;
+    top: 10%;
     background: grey;
     width: 60%;
-    height: 60%;
+    height: 80%;
     background: rgba(255, 255, 255, 0.192);
         backdrop-filter: blur(10px);
         border-radius: 15px;
@@ -500,7 +500,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 13px;
     background: 0;
-    top: 30%;
+    top: 20%;
     text-align: center;
     position: absolute;
 }
@@ -635,7 +635,7 @@ h1 {
   
   input.question:focus,
   input.question:valid {
-    padding-top: 35px;
+    padding-top: 0;
   }
   
   textarea.question:valid,
@@ -726,10 +726,12 @@ h1 {
     top: auto;
     position: absolute;
     bottom: 10px;
-    left: 45%;
-    width: 10%;
+    left: 5%;
+    width: 90%;
+    height: 10%;
     border-radius: 10px;
     border: 0;
+    cursor: pointer;
     background: #9c6c6c;
     font-family: 'baloo';
     color: #e2e2e2;
