--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 p {
-    color: green;
+    color: #9c6c6c;
 }
 * {
     background-color: #e2e2e2;
@@ -309,9 +309,10 @@ body {
     position: fixed;
     color: #9c6c6c;
     margin: 0;
-    font-size: 50px;
+    width: 360px;
+    top: 10px;
+    height: auto;
     background: 0;
-    height: 5%;
     right: 10px;
 }
 .d0 {
@@ -474,16 +475,14 @@ body {
 }
 .containerActive {
     position: fixed;
-    z-index: 10;
-    left: 20%;
-    top: 10%;
+    text-align: center;
+    z-index: 13;
     background: grey;
-    width: 60%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     background: rgba(255, 255, 255, 0.192);
         backdrop-filter: blur(10px);
-        border-radius: 15px;
-        border: 1px solid rgba(178, 178, 178, 0.568);
+        -webkit-backdrop-filter: blur(10px);
 }
 
 .containerName {
@@ -494,81 +493,31 @@ body {
 }
 
 .container1 {
-    width: 100%;
-    left: 10%;
-    max-width: 80%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
+    font-family: 'inter';
     background: 0;
-    top: 20%;
-    text-align: center;
-    position: absolute;
+    top: 13vh;
+    position: relative;
+    text-align: left;
+    width: 600px;
+    max-width: 90%;
+    font-size: large;
+    height: 13vh;
+    display: inline-block;
 }
 
-ul.ks-cboxtags {
-    list-style: none;
-    padding: 20px;
+.ks-cboxtags {
+    list-style-type: none;
+    background: 0;
+    padding: 0;
+    display: flex;
+}
+.taste {
     background: 0;
 }
-ul.ks-cboxtags li{
-  display: inline;
-  background: 0;
-}
-ul.ks-cboxtags li label{
-    display: inline-block;
-    background-color: rgba(255, 255, 255, .9);
-    border: 2px solid rgba(139, 139, 139, .3);
-    color: #adadad;
-    border-radius: 25px;
-    white-space: nowrap;
-    margin: 3px 0px;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-tap-highlight-color: transparent;
-    transition: all .2s;
-}
 
-ul.ks-cboxtags li label {
-    padding: 8px 12px;
-    cursor: pointer;
-}
-
-ul.ks-cboxtags li label::before {
-    display: inline-block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    font-size: 12px;
-    padding: 2px 6px 2px 2px;
-    transition: transform .3s ease-in-out;
-}
-
-ul.ks-cboxtags li input[type="checkbox"]:checked + label::before {
-    transition: transform .3s ease-in-out;
-}
-
-ul.ks-cboxtags li input[type="checkbox"]:checked + label {
-    border: 2px solid #895d5d;
-    background-color: #9c6c6c;
-    color: #fff;
-    transition: all .2s;
-}
-
-ul.ks-cboxtags li input[type="checkbox"] {
-  display: absolute;
-}
-ul.ks-cboxtags li input[type="checkbox"] {
-  position: absolute;
-  opacity: 0;
-}
-ul.ks-cboxtags li input[type="checkbox"]:focus + label {
-  border: 2px solid #895d5d;
+label {
+    background: 0;
+    color: #9c6c6c;
 }
 
 h1 {
@@ -577,17 +526,18 @@ h1 {
   }
   
 .nameTgsp {
-    font-family: 'baloo';
-    display: block;
+    font-family: 'inter';
     margin: 10px;
+    margin-left: 0;
     padding: 5px;
+    padding-left: 0;
     border: none;
-    font-size: 22px;
+    font-size: 16px;
     background: 0;
     cursor: text;
-    top: 30px;
     position: relative;
     width: 100%;
+    text-align: left;
   }
   
   textarea:focus,
@@ -598,49 +548,24 @@ h1 {
   
   input.question,
   textarea.question {
-    left: 10%;
-    top: 60px;
-    font-size: 35px;
+    top: 12vh;
+    font-size: 22px;
     font-weight: 300;
     border-radius: 2px;
     margin: 0;
     border: none;
-    width: 80%;
+    width: 600px;
+    max-width: 90%;
     position: relative;
     background: rgba(0, 0, 0, 0);
-    transition: padding-top 0.2s ease, margin-top 0.2s ease;
     overflow-x: hidden; /* Hack to make "rows" attribute apply in Firefox. */
   }
   /* Underline and Placeholder */
-  
-  input.question + label {
-    display: block;
-    position: relative;
-    white-space: nowrap;
-    padding: 0;
-    margin: 0;
-    top: 40px;
-    left: 10%;
-    width: 10%;
-    border-top: 1px solid #9c6c6c;
-    -webkit-transition: width 0.4s ease;
-    transition: width 0.4s ease;
-    height: 0px;
-  }
-  
-  input.question:focus + label,
-  textarea.question:focus + label {
-    width: 80%;
-  }
-  
-  input.question:focus,
-  input.question:valid {
-    padding-top: 0;
-  }
-  
-  textarea.question:valid,
-  textarea.question:focus {
-    margin-top: 35px;
+  input.question {
+    border: 1.7px solid #ccc;
+    box-shadow: inset 0px 14px 20px -15px #606060;
+    border-radius: 10px;
+    background: #FFFFFF;
   }
   
   input.question:focus + label > span,
@@ -648,6 +573,8 @@ h1 {
     top: -75px;
     font-size: 22px;
     color: #9c6c6c;
+    text-align: left;
+    
   }
   
   textarea.question:focus + label > span,
@@ -657,55 +584,12 @@ h1 {
     color: #9c6c6c;
   }
   
-  input.question:valid + label,
-  textarea.question:valid + label {
-    border-color: green;
-  }
-  
   input.question:invalid,
   textarea.question:invalid {
     box-shadow: none;
   }
   
-  input.question + label > span,
-  textarea.question + label > span {
-    font-weight: 300;
-    margin: 0;
-    position: absolute;
-    color: #9c6c6c;
-    font-family: 'baloo';
-    font-size: 48px;
-    top: -66px;
-    left: 0px;
-    z-index: -1;
-    cursor:text;
-    -webkit-transition: top 0.2s ease, font-size 0.2s ease, color 0.2s ease;
-    transition: top 0.2s ease, font-size 0.2s ease, color 0.2s ease;
-  }
-  
-  input[type="submit"] {
-    -webkit-transition: opacity 0.2s ease, background 0.2s ease;
-    transition: opacity 0.2s ease, background 0.2s ease;
-    display: block;
-    opacity: 0;
-    margin: 10px 0 0 0;
-    padding: 10px;
-    cursor: pointer;
-  }
-  
-  input[type="submit"]:hover {
-    background: #EEE;
-    color: #9c6c6c;
-  }
-  
-  input[type="submit"]:active {
-    background: #999;
-  }
-  
-  input.question:valid ~ input[type="submit"] {
-    -webkit-animation: appear 1s forwards;
-    animation: appear 1s forwards;
-  }
+
   
   input.question:invalid ~ input[type="submit"], textarea.question:invalid ~ input[type="submit"] {
     display: none;
@@ -723,23 +607,22 @@ h1 {
     }
   }
   .sub {
-    top: auto;
-    position: absolute;
-    bottom: 10px;
-    left: 5%;
-    width: 90%;
-    height: 10%;
+    top: 115%;
+    position: relative;
+    max-width: 90%;
+    width: 600px;
+    height: 30%;
     border-radius: 10px;
     border: 0;
     cursor: pointer;
     background: #9c6c6c;
     font-family: 'baloo';
     color: #e2e2e2;
+    box-shadow: inset 0px 11px 5px -7px #2d2d2d7a;
   }
   .close {
     background: 0;
     width: 40px;
-    opacity: 50%;
     right: 10px;
     position: absolute;
     top: 10px;
@@ -752,4 +635,71 @@ h1 {
     text-shadow: 1px 1px 2px black;
     color: #895d5d;
     font-family: 'baloo';
+}
+#pbtn {
+    top: 0;
+    text-align: center;
+    position: relative;
+    background: 0;
+    height: 20%;
+    width: 100%;
+    margin: 0;
+    z-index: -1;
+}
+.chexboxes {
+    width: 100vw;
+    text-align: center;
+    background: 0;
+}
+.nameTgla {
+    top: -25px;
+    position: relative;
+    width: 600px;
+    max-width: 90%;
+    background: 0;
+    display: -webkit-inline-box;
+}
+#order {
+    margin: 0;
+    background: 0;
+    font-family: 'inter';
+    width: 600px;
+    text-align: left;
+    max-width: 90%;
+    display: inline-block;
+    bottom: -10vh;
+    position: relative;
+    top: auto;
+    font-size: xxx-large;
+    color: #9c6c6c;
+}
+#or {
+    background: 0;
+    text-align: left;
+    font-family: 'baloo';
+    display: inline-block;
+    width: 600px;
+    max-width: 90%;
+    top: -15vh;
+    position: relative;
+}
+@font-face {
+    font-family: "inter";
+    src: url("./fonts/Inter-Bold.otf");
+    font-style: normal;
+    font-weight: normal;
+}
+.tastebtn {
+    width: 1.3rem;
+    height: 1.3rem;
+    background-color: white;
+    border-radius: 28%;
+    vertical-align: middle;
+    border: 1px solid #ddd;
+    appearance: none;
+    -webkit-appearance: none;
+    outline: none;
+    cursor: pointer;
+    box-shadow: inset 0px 17px 13px -19px #3f3f3f;
+    border: 1.7px solid #c2c2c2;
 }
